--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "dependencies": {
     "angular-route": "~1.2.20",
-    "angular-resource": "~1.2.20"
+    "angular-resource": "~1.2.20",
+    "jquery": "~2.1.1"
   }
 }
