--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "angular-route": "~1.2.20",
     "angular-resource": "~1.2.20",
-    "jquery": "~2.1.1"
+    "jquery": "~2.1.1",
+    "angular-cookies": "~1.2.21",
+    "ngLocale": "*"
   }
 }
