Completed Routing Module

--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,8 @@
     "angular-resource": "~1.2.20",
     "jquery": "~2.1.1",
     "angular-cookies": "~1.2.21",
-    "ngLocale": "*"
+    "ngLocale": "*",
+    "angular-sanitize": "~1.2.21",
+    "angular": "~1.2.21"
   }
 }
