--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "gulp-util": "^3.0.0",
     "gulp-watch": "^0.6.9",
     "html-loader": "^0.2.2",
+    "ngmin": "^0.5.0",
+    "ngmin-webpack-plugin": "^0.1.1",
     "script-loader": "^0.6.0",
-    "webpack": "^1.3.2-beta8"
+    "webpack": "^1.3.2-beta8",
+    "webpack-core": "^0.3.5"
   },
   "browser": {
     "jquery": "./app/assets/js/lib/jquery"
